add buttons interactions, some changes

--- a/index.html
+++ b/index.html
@@ -41,7 +41,16 @@
                     <a href="#" class="nav-link w-nav-link">الرئيسية</a>
                     <a href="#our-service" class="nav-link w-nav-link">خدماتنا</a>
                     <a href="#about-us" class="nav-link w-nav-link">من نحن</a>
-                    <a href="https://wa.me/967774769410" class="nav-link nav-button-contact w-nav-link">تواصل معنا</a>
+                    <a class="button" href="https://wa.me/967774769410" class="nav-link w-nav-link">
+                        <div class="button-wrapper">
+                            <div class="text">تواصـــــل معنــا</div>
+                            <span class="wm-icon">
+                                <svg xmlns="https://www.w3.org/2000/svg" height="2em" width="2em" viewBox="0 0 24 24">
+                                    <path fill="currentColor" d="M19.05 4.91A9.816 9.816 0 0 0 12.04 2c-5.46 0-9.91 4.45-9.91 9.91 0 1.75.46 3.45 1.32 4.95L2.05 22l5.25-1.38c1.45.79 3.08 1.21 4.74 1.21 5.46 0 9.91-4.45 9.91-9.91 0-2.65-1.03-5.14-2.9-7.01zm-7.01 15.24c-1.48 0-2.93-.4-4.2-1.15l-.3-.18-3.12.82.83-3.04-.2-.31c-.82-1.31-1.26-2.83-1.26-4.38 0-4.54 3.7-8.24 8.24-8.24 2.2 0 4.27.86 5.82 2.42 1.56 1.56 2.41 3.63 2.41 5.83.02 4.54-3.68 8.23-8.22 8.23zm4.52-6.16c-.25-.12-1.47-.72-1.69-.81-.23-.08-.39-.12-.56.12-.17.25-.64.81-.78.97-.14.17-.29.19-.54.06-.25-.12-1.05-.39-1.99-1.23-.74-.66-1.23-1.47-1.38-1.72-.14-.25-.02-.38.11-.51.11-.11.25-.29.37-.43s.17-.25.25-.41c.08-.17.04-.31-.02-.43s-.56-1.34-.76-1.84c-.2-.48-.41-.42-.56-.43h-.48c-.17 0-.43.06-.66.31-.22.25-.86.85-.86 2.07 0 1.22.89 2.4 1.01 2.56.12.17 1.75 2.67 4.23 3.74.59.26 1.05.41 1.41.52.59.19 1.13.16 1.56.1.48-.07 1.47-.6 1.67-1.18.21-.58.21-1.07.14-1.18s-.22-.16-.47-.28z"/>
+                                </svg>
+                            </span>
+                        </div>
+                    </a>
                 </nav>
                 <div class="menu-button w-nav-button" onclick="toggleMobileMenu()">
                     <div class="w-icon-nav-menu"><span></span></div>
@@ -55,12 +64,16 @@
             <div class="w-layout-blockcontainer hero-container w-container">
                 <div class="w-layout-blockcontainer hero-text-container w-container">
                     <img src="images/pixel-white.png" alt="" class="white-pixel-img"/>
-                    <h1 class="grating-word">حياكــــــــم الله</h1>
+                    <h1 class="grating-word">حياك الله في بكســـل</h1>
                     <h2 class="service-slogen">تفـــرد بتصميــم ابداعـــــي</h2>
                     <div class= "service-words-container">
                         <h1 class="service-words">لموقعك الالكتروني</h1>
                         <h1 class="service-words">لعلامتك التجاريـــة</h1>
                         <h1 class="service-words">لمحتواك الرقمـــــي</h1>
+                    </div>
+                    <div class="hero-buttons-container">
+                        <a href="https://wa.me/967774769410" class="primary-button w-button hero-button">اتصل بنا</a>
+                        <a href="#our-service" class="outline-button w-button hero-button">خدماتنا</a>
                     </div>
                     <div class="w-layout-blockcontainer slogen-container w-container">
                         <h3 class="slogen one">نصنـــــــع لكل عميل </h3>
@@ -91,58 +104,26 @@
                         <h1 class="service-circal-shap">⬛</h1>
                     </div>
                     <h1 class="service-desc">تصميم الهويات البصرية والعلامــــات التجاريـــــة</h1>
-                    <a href="#" class="service-button w-button">مشـاهــدة  اعـمالنــا</a>
+                    <button class="cssbuttons-io-button">
+                        مشاهدة اعمالنا
+                        <div class="icon">
+                        <svg
+                            height="24"
+                            width="24"
+                            viewBox="0 0 24 24"
+                            xmlns="http://www.w3.org/2000/svg"
+                        >
+                            <path d="M0 0h24v24H0z" fill="none"></path>
+                            <path
+                            d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"
+                            fill="currentColor"
+                            ></path>
+                        </svg>
+                        </div>
+                    </button>
+  
                 </div>
                 <div class="w-layout-grid service-grid-card">
-                    <img src="images/service-images/advertising.png" alt="" class="service-img"/>
-                    <div class="service-line-shape">
-                        <h1 class="service-circal-shap leftside">⬛</h1>
-                        <h1 class="service-circal-shap">⬛</h1>
-                    </div>
-                    <h1 class="service-desc">
-                        تصميــــــم وترويـــــــج<br/>الحملات الاعلانيــــــــــة
-                    </h1>
-                    <a href="#" class="service-button w-button">مشـاهــدة  اعـمالنــا</a>
-                </div>
-                <div id="w-node-b1bea972-e546-0e73-f696-bed71b0397b0-36933a22" class="w-layout-grid service-grid-card">
-                    <img src="images/service-images/conferences.png" alt="" class="service-img"/>
-                    <div class="service-line-shape">
-                        <h1 class="service-circal-shap leftside">⬛</h1>
-                        <h1 class="service-circal-shap">⬛</h1>
-                    </div>
-                    <h1 class="service-desc">المعــــــــــارض والمؤتمــــــــــرات</h1>
-                    <a href="#" class="service-button w-button">مشـاهــدة  اعـمالنــا</a>
-                </div>
-                <div class="w-layout-grid service-grid-card">
-                    <img src="images/service-images/printing.png" alt="" class="service-img"/>
-                    <div class="service-line-shape">
-                        <h1 class="service-circal-shap leftside">⬛</h1>
-                        <h1 class="service-circal-shap">⬛</h1>
-                    </div>
-                    <h1 class="service-desc">المطبوعــــــات الورقيـــــــة والقماشيـــة والاعلانيـــة</h1>
-                    <a href="#" class="service-button w-button">مشـاهــدة  اعـمالنــا</a>
-                </div>
-                <div class="w-layout-grid service-grid-card hide">
-                    <img src="images/service-images/couch-bagging.png" alt="" class="service-img"/>
-                    <div class="service-line-shape">
-                        <h1 class="service-circal-shap leftside">⬛</h1>
-                        <h1 class="service-circal-shap">⬛</h1>
-                    </div>
-                    <h1 class="service-desc">تصميم الحقائــــــــــب التدريبيــــــــــة</h1>
-                    <a href="#" class="service-button w-button">مشـاهــدة  اعـمالنــا</a>
-                </div>
-                <div class="w-layout-grid service-grid-card hide">
-                    <img src="images/service-images/sites.png" alt="" class="service-img"/>
-                    <div class="service-line-shape">
-                        <h1 class="service-circal-shap leftside">⬛</h1>
-                        <h1 class="service-circal-shap">⬛</h1>
-                    </div>
-                    <h1 class="service-desc">
-                        تطوير المواقــــــــــع<br/>والتطبيقـات الالكترونيـة
-                    </h1>
-                    <a href="#" class="service-button w-button">مشـاهــدة  اعـمالنــا</a>
-                </div>
-                <div class="w-layout-grid service-grid-card last-element-right hide">
                     <img src="images/service-images/motion.png" alt="" class="service-img"/>
                     <div class="service-line-shape">
                         <h1 class="service-circal-shap leftside">⬛</h1>
@@ -151,8 +132,154 @@
                     <h1 class="service-desc">
                         الموشـــــــن جرافيـــــــك<br/>والفلاشات التوعويـــــــة
                     </h1>
-                    <a href="#" class="service-button w-button">مشـاهــدة  اعـمالنــا</a>
+                    <button class="cssbuttons-io-button">
+                        مشاهدة اعمالنا
+                        <div class="icon">
+                        <svg
+                            height="24"
+                            width="24"
+                            viewBox="0 0 24 24"
+                            xmlns="http://www.w3.org/2000/svg"
+                        >
+                            <path d="M0 0h24v24H0z" fill="none"></path>
+                            <path
+                            d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"
+                            fill="currentColor"
+                            ></path>
+                        </svg>
+                        </div>
+                    </button>
                 </div>
+                <div class="w-layout-grid service-grid-card hide">
+                    <img src="images/service-images/advertising.png" alt="" class="service-img"/>
+                    <div class="service-line-shape">
+                        <h1 class="service-circal-shap leftside">⬛</h1>
+                        <h1 class="service-circal-shap">⬛</h1>
+                    </div>
+                    <h1 class="service-desc">
+                        تصميــــــم وترويـــــــج<br/>الحملات الاعلانيــــــــــة
+                    </h1>
+                    <button class="cssbuttons-io-button">
+                        مشاهدة اعمالنا
+                        <div class="icon">
+                        <svg
+                            height="24"
+                            width="24"
+                            viewBox="0 0 24 24"
+                            xmlns="http://www.w3.org/2000/svg"
+                        >
+                            <path d="M0 0h24v24H0z" fill="none"></path>
+                            <path
+                            d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"
+                            fill="currentColor"
+                            ></path>
+                        </svg>
+                        </div>
+                    </button>
+                </div>
+                <div class="w-layout-grid service-grid-card">
+                    <img src="images/service-images/conferences.png" alt="" class="service-img"/>
+                    <div class="service-line-shape">
+                        <h1 class="service-circal-shap leftside">⬛</h1>
+                        <h1 class="service-circal-shap">⬛</h1>
+                    </div>
+                    <h1 class="service-desc">المعــــــــــارض والمؤتمــــــــــرات</h1>
+                    <button class="cssbuttons-io-button">
+                        مشاهدة اعمالنا
+                        <div class="icon">
+                        <svg
+                            height="24"
+                            width="24"
+                            viewBox="0 0 24 24"
+                            xmlns="http://www.w3.org/2000/svg"
+                        >
+                            <path d="M0 0h24v24H0z" fill="none"></path>
+                            <path
+                            d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"
+                            fill="currentColor"
+                            ></path>
+                        </svg>
+                        </div>
+                    </button>
+                </div>
+                <div class="w-layout-grid service-grid-card">
+                    <img src="images/service-images/sites.png" alt="" class="service-img"/>
+                    <div class="service-line-shape">
+                        <h1 class="service-circal-shap leftside">⬛</h1>
+                        <h1 class="service-circal-shap">⬛</h1>
+                    </div>
+                    <h1 class="service-desc">
+                        تطوير المواقــــــــــع<br/>والتطبيقـات الالكترونيـة
+                    </h1>
+                    <button class="cssbuttons-io-button">
+                        مشاهدة اعمالنا
+                        <div class="icon">
+                        <svg
+                            height="24"
+                            width="24"
+                            viewBox="0 0 24 24"
+                            xmlns="http://www.w3.org/2000/svg"
+                        >
+                            <path d="M0 0h24v24H0z" fill="none"></path>
+                            <path
+                            d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"
+                            fill="currentColor"
+                            ></path>
+                        </svg>
+                        </div>
+                    </button>
+                </div>
+                <div class="w-layout-grid service-grid-card hide">
+                    <img src="images/service-images/couch-bagging.png" alt="" class="service-img"/>
+                    <div class="service-line-shape">
+                        <h1 class="service-circal-shap leftside">⬛</h1>
+                        <h1 class="service-circal-shap">⬛</h1>
+                    </div>
+                    <h1 class="service-desc">تصميم الحقائــــــــــب التدريبيــــــــــة</h1>
+                    <button class="cssbuttons-io-button">
+                        مشاهدة اعمالنا
+                        <div class="icon">
+                        <svg
+                            height="24"
+                            width="24"
+                            viewBox="0 0 24 24"
+                            xmlns="http://www.w3.org/2000/svg"
+                        >
+                            <path d="M0 0h24v24H0z" fill="none"></path>
+                            <path
+                            d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"
+                            fill="currentColor"
+                            ></path>
+                        </svg>
+                        </div>
+                    </button>
+                </div>
+                <div class="w-layout-grid service-grid-card  last-element-right hide">
+                    <img src="images/service-images/printing.png" alt="" class="service-img"/>
+                    <div class="service-line-shape">
+                        <h1 class="service-circal-shap leftside">⬛</h1>
+                        <h1 class="service-circal-shap">⬛</h1>
+                    </div>
+                    <h1 class="service-desc">المطبوعــــــات الورقيـــــــة والقماشيـــة والاعلانيـــة</h1>
+                    <button class="cssbuttons-io-button">
+                        مشاهدة اعمالنا
+                        <div class="icon">
+                        <svg
+                            height="24"
+                            width="24"
+                            viewBox="0 0 24 24"
+                            xmlns="http://www.w3.org/2000/svg"
+                        >
+                            <path d="M0 0h24v24H0z" fill="none"></path>
+                            <path
+                            d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"
+                            fill="currentColor"
+                            ></path>
+                        </svg>
+                        </div>
+                    </button>
+                </div>
+                
                 <div class="w-layout-grid service-grid-card last-element hide">
                     <img src="images/service-images/markiting.png" alt="" class="service-img"/>
                     <div class="service-line-shape">
@@ -160,11 +287,26 @@
                         <h1 class="service-circal-shap">⬛</h1>
                     </div>
                     <h1 class="service-desc">التسويــــــــــق الالكترونــــــــــي</h1>
-                    <a href="#" class="service-button w-button">مشـاهــدة  اعـمالنــا</a>
+                    <button class="cssbuttons-io-button">
+                        مشاهدة اعمالنا
+                        <div class="icon">
+                        <svg
+                            height="24"
+                            width="24"
+                            viewBox="0 0 24 24"
+                            xmlns="http://www.w3.org/2000/svg"
+                        >
+                            <path d="M0 0h24v24H0z" fill="none"></path>
+                            <path
+                            d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"
+                            fill="currentColor"
+                            ></path>
+                        </svg>
+                        </div>
+                    </button>
                 </div>
             </div>
-            <button onclick="showMore()"
-                    class="service-button show-more w-button">رؤية المزيد</button>
+            <button onclick="showMore()" class="service-button show-more w-button">رؤية المزيد</button>
         </section>
         <section class="section">
             <div class="partners-head">
