modifying (mobile version)

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <div class= "service-words-container">
                         <h1 class="service-words">لموقعك الالكتروني</h1>
                         <h1 class="service-words">لعلامتك التجاريـــة</h1>
-                        <h1 class="service-words">لمحتواك الرقمـــــي</h1>
+                        <h1 class="service-words">لمتجرك الالكترونـــي</h1>
                     </div>
                     <div class="hero-buttons-container">
                         <a href="https://wa.me/967774769410" class="primary-button w-button hero-button">اتصل بنا</a>
