add companies images

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 ("ontouchstart"in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
             }(window, document);
         </script>
-        <link  rel="shortcut icon" type="image/x-icon"/>
-        <link  rel="apple-touch-icon"/>
+        <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon"/>
+        <link href="images/webclip.png" rel="apple-touch-icon"/>
 
     </head>
     <body class="body">
@@ -121,7 +121,7 @@
                         </svg>
                         </div>
                     </button>
-  
+
                 </div>
                 <div class="w-layout-grid service-grid-card">
                     <img src="images/service-images/motion.png" alt="" class="service-img"/>
@@ -279,7 +279,7 @@
                         </div>
                     </button>
                 </div>
-                
+
                 <div class="w-layout-grid service-grid-card last-element hide">
                     <img src="images/service-images/markiting.png" alt="" class="service-img"/>
                     <div class="service-line-shape">
@@ -317,20 +317,62 @@
                 <div class="partners-scroll-container">
                     <div class="partners-scroll-wrapper">
                         <div class="images-container">
+                            <!-- First set of logos -->
                             <div class="service-company-contairner">
                                 <img src="images/companies-images/izar-colorful.png" loading="lazy" alt="" class="srvice-company-image"/>
                             </div>
                             <div class="service-company-contairner">
-                                <img src="images/companies-images/izar-colorful.png" loading="lazy" alt="" class="srvice-company-image"/>
+                                <img src="images/companies-images/R2Z.png" loading="lazy" alt="" class="srvice-company-image"/>
                             </div>
+                            <div class="service-company-contairner">
+                                <img src="images/companies-images/myprofession.png" loading="lazy" alt="" class="srvice-company-image"/>
+                            </div>
+                            <div class="service-company-contairner">
+                                <img src="images/companies-images/ahgaph.png" loading="lazy" alt="" class="srvice-company-image"/>
+                            </div>
+                            <div class="service-company-contairner">
+                                <img src="images/companies-images/samlex.png" loading="lazy" alt="" class="srvice-company-image"/>
+                            </div>
+                            <div class="service-company-contairner">
+                                <img src="images/companies-images/hospital.png" loading="lazy" alt="" class="srvice-company-image"/>
+                            </div>
+                            <!-- Second set of logos (duplicate) -->
                             <div class="service-company-contairner">
                                 <img src="images/companies-images/izar-colorful.png" loading="lazy" alt="" class="srvice-company-image"/>
                             </div>
                             <div class="service-company-contairner">
+                                <img src="images/companies-images/R2Z.png" loading="lazy" alt="" class="srvice-company-image"/>
+                            </div>
+                            <div class="service-company-contairner">
+                                <img src="images/companies-images/myprofession.png" loading="lazy" alt="" class="srvice-company-image"/>
+                            </div>
+                            <div class="service-company-contairner">
+                                <img src="images/companies-images/ahgaph.png" loading="lazy" alt="" class="srvice-company-image"/>
+                            </div>
+                            <div class="service-company-contairner">
+                                <img src="images/companies-images/samlex.png" loading="lazy" alt="" class="srvice-company-image"/>
+                            </div>
+                            <div class="service-company-contairner">
+                                <img src="images/companies-images/hospital.png" loading="lazy" alt="" class="srvice-company-image"/>
+                            </div>
+                            <!-- Third set of logos (duplicate) -->
+                            <div class="service-company-contairner">
                                 <img src="images/companies-images/izar-colorful.png" loading="lazy" alt="" class="srvice-company-image"/>
                             </div>
                             <div class="service-company-contairner">
-                                <img src="images/companies-images/izar-colorful.png" loading="lazy" alt="" class="srvice-company-image"/>
+                                <img src="images/companies-images/R2Z.png" loading="lazy" alt="" class="srvice-company-image"/>
+                            </div>
+                            <div class="service-company-contairner">
+                                <img src="images/companies-images/myprofession.png" loading="lazy" alt="" class="srvice-company-image"/>
+                            </div>
+                            <div class="service-company-contairner">
+                                <img src="images/companies-images/ahgaph.png" loading="lazy" alt="" class="srvice-company-image"/>
+                            </div>
+                            <div class="service-company-contairner">
+                                <img src="images/companies-images/samlex.png" loading="lazy" alt="" class="srvice-company-image"/>
+                            </div>
+                            <div class="service-company-contairner">
+                                <img src="images/companies-images/hospital.png" loading="lazy" alt="" class="srvice-company-image"/>
                             </div>
                         </div>
                     </div>
