add favicon and modify service section(circul)

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                     </button>
                 </div>
             </div>
-            <button onclick="showMore()" class="service-button show-more w-button">رؤية المزيد</button>
+            <button onclick="showMore()" class="show-more w-button">رؤيــة المزيــد</button>
         </section>
         <section class="section">
             <div class="partners-head">
