change cyrcle to pixel shape (service section)

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
                 <div class="w-layout-grid service-grid-card">
                     <img src="images/service-images/papers.png" alt="" class="service-img"/>
                     <div id="w-node-_07608309-4219-7b2a-e06a-b42e99bf5db5-36933a22" class="service-line-shape">
-                        <h1 class="service-circal-shap leftside">⬛</h1>
-                        <h1 class="service-circal-shap">⬛</h1>
+                        <h1 class="service-pixel-shap leftside">⬛</h1>
+                        <h1 class="service-pixel-shap">⬛</h1>
                     </div>
                     <h1 class="service-desc">تصميم الهويات البصرية والعلامــــات التجاريـــــة</h1>
                     <button class="cssbuttons-io-button">
@@ -126,8 +126,8 @@
                 <div class="w-layout-grid service-grid-card">
                     <img src="images/service-images/motion.png" alt="" class="service-img"/>
                     <div class="service-line-shape">
-                        <h1 class="service-circal-shap leftside">⬛</h1>
-                        <h1 class="service-circal-shap">⬛</h1>
+                        <h1 class="service-pixel-shap leftside">⬛</h1>
+                        <h1 class="service-pixel-shap">⬛</h1>
                     </div>
                     <h1 class="service-desc">
                         الموشـــــــن جرافيـــــــك<br/>والفلاشات التوعويـــــــة
@@ -153,8 +153,8 @@
                 <div class="w-layout-grid service-grid-card hide">
                     <img src="images/service-images/advertising.png" alt="" class="service-img"/>
                     <div class="service-line-shape">
-                        <h1 class="service-circal-shap leftside">⬛</h1>
-                        <h1 class="service-circal-shap">⬛</h1>
+                        <h1 class="service-pixel-shap leftside">⬛</h1>
+                        <h1 class="service-pixel-shap">⬛</h1>
                     </div>
                     <h1 class="service-desc">
                         تصميــــــم وترويـــــــج<br/>الحملات الاعلانيــــــــــة
@@ -180,8 +180,8 @@
                 <div class="w-layout-grid service-grid-card">
                     <img src="images/service-images/conferences.png" alt="" class="service-img"/>
                     <div class="service-line-shape">
-                        <h1 class="service-circal-shap leftside">⬛</h1>
-                        <h1 class="service-circal-shap">⬛</h1>
+                        <h1 class="service-pixel-shap leftside">⬛</h1>
+                        <h1 class="service-pixel-shap">⬛</h1>
                     </div>
                     <h1 class="service-desc">المعــــــــــارض والمؤتمــــــــــرات</h1>
                     <button class="cssbuttons-io-button">
@@ -205,8 +205,8 @@
                 <div class="w-layout-grid service-grid-card">
                     <img src="images/service-images/sites.png" alt="" class="service-img"/>
                     <div class="service-line-shape">
-                        <h1 class="service-circal-shap leftside">⬛</h1>
-                        <h1 class="service-circal-shap">⬛</h1>
+                        <h1 class="service-pixel-shap leftside">⬛</h1>
+                        <h1 class="service-pixel-shap">⬛</h1>
                     </div>
                     <h1 class="service-desc">
                         تطوير المواقــــــــــع<br/>والتطبيقـات الالكترونيـة
@@ -232,8 +232,8 @@
                 <div class="w-layout-grid service-grid-card hide">
                     <img src="images/service-images/couch-bagging.png" alt="" class="service-img"/>
                     <div class="service-line-shape">
-                        <h1 class="service-circal-shap leftside">⬛</h1>
-                        <h1 class="service-circal-shap">⬛</h1>
+                        <h1 class="service-pixel-shap leftside">⬛</h1>
+                        <h1 class="service-pixel-shap">⬛</h1>
                     </div>
                     <h1 class="service-desc">تصميم الحقائــــــــــب التدريبيــــــــــة</h1>
                     <button class="cssbuttons-io-button">
@@ -257,8 +257,8 @@
                 <div class="w-layout-grid service-grid-card  last-element-right hide">
                     <img src="images/service-images/printing.png" alt="" class="service-img"/>
                     <div class="service-line-shape">
-                        <h1 class="service-circal-shap leftside">⬛</h1>
-                        <h1 class="service-circal-shap">⬛</h1>
+                        <h1 class="service-pixel-shap leftside">⬛</h1>
+                        <h1 class="service-pixel-shap">⬛</h1>
                     </div>
                     <h1 class="service-desc">المطبوعــــــات الورقيـــــــة والقماشيـــة والاعلانيـــة</h1>
                     <button class="cssbuttons-io-button">
@@ -283,8 +283,8 @@
                 <div class="w-layout-grid service-grid-card last-element hide">
                     <img src="images/service-images/markiting.png" alt="" class="service-img"/>
                     <div class="service-line-shape">
-                        <h1 class="service-circal-shap leftside">⬛</h1>
-                        <h1 class="service-circal-shap">⬛</h1>
+                        <h1 class="service-pixel-shap leftside">⬛</h1>
+                        <h1 class="service-pixel-shap">⬛</h1>
                     </div>
                     <h1 class="service-desc">التسويــــــــــق الالكترونــــــــــي</h1>
                     <button class="cssbuttons-io-button">
