change hero img

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <h3 class="slogen">قصــــــــــة نجـــــــــاح</h3>
                     </div>
                 </div>
-                <img src="images/hero-section.png" loading="lazy" alt="" class="hero-img"/>
+                <img src="images/hero-img.png" loading="lazy" alt="" class="hero-img"/>
             </div>
         </section>
         <section class="section aboutus-section" id="about-us">
