--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <!-- Last Published: Sat Mar 22 2025 14:08:12 GMT+0000 (Coordinated Universal Time) -->
 <html hx-boost="true">
   <head>
-    <script src="https://unpkg.com/htmx.org@1.9.10" defer></script>
     <script src="script.js"></script>
     <meta charset="utf-8" />
     <title>Pixel</title>
@@ -121,7 +120,7 @@
           </div>
         </div>
         <img
-          src="images/hero-img.webp"
+          src="https://imgur.com/Zr73eZa.png"
           loading="lazy"
           alt=""
           class="hero-img"
@@ -163,7 +162,7 @@
           <h1 class="service-desc">
             تصميم الهويات البصرية والعلامــــات التجاريـــــة
           </h1>
-          <button class="cssbuttons-io-button">
+          <a href="soon.html" class="cssbuttons-io-button">
             مشاهدة اعمالنا
             <div class="icon">
               <svg
@@ -179,7 +178,7 @@
                 ></path>
               </svg>
             </div>
-          </button>
+          </a>
         </div>
         <div class="w-layout-grid service-grid-card">
           <img
@@ -194,7 +193,7 @@
           <h1 class="service-desc">
             الموشـــــــن جرافيـــــــك<br />والفلاشات التوعويـــــــة
           </h1>
-          <button class="cssbuttons-io-button">
+          <a href="soon.html" class="cssbuttons-io-button">
             مشاهدة اعمالنا
             <div class="icon">
               <svg
@@ -210,7 +209,7 @@
                 ></path>
               </svg>
             </div>
-          </button>
+          </a>
         </div>
         <div class="w-layout-grid service-grid-card hide">
           <img
@@ -225,7 +224,7 @@
           <h1 class="service-desc">
             تصميــــــم وترويـــــــج<br />الحملات الاعلانيــــــــــة
           </h1>
-          <button class="cssbuttons-io-button">
+          <a href="soon.html" class="cssbuttons-io-button">
             مشاهدة اعمالنا
             <div class="icon">
               <svg
@@ -241,7 +240,7 @@
                 ></path>
               </svg>
             </div>
-          </button>
+          </a>
         </div>
         <div class="w-layout-grid service-grid-card">
           <img
@@ -254,7 +253,7 @@
             <h1 class="service-pixel-shap">⬛</h1>
           </div>
           <h1 class="service-desc">المعــــــــــارض والمؤتمــــــــــرات</h1>
-          <button class="cssbuttons-io-button">
+          <a href="soon.html" class="cssbuttons-io-button">
             مشاهدة اعمالنا
             <div class="icon">
               <svg
@@ -270,7 +269,7 @@
                 ></path>
               </svg>
             </div>
-          </button>
+          </a>
         </div>
         <div class="w-layout-grid service-grid-card">
           <img
@@ -285,7 +284,7 @@
           <h1 class="service-desc">
             تطوير المواقــــــــــع<br />والتطبيقـات الالكترونيـة
           </h1>
-          <button class="cssbuttons-io-button">
+          <a href="soon.html" class="cssbuttons-io-button">
             مشاهدة اعمالنا
             <div class="icon">
               <svg
@@ -301,7 +300,7 @@
                 ></path>
               </svg>
             </div>
-          </button>
+          </a>
         </div>
         <div class="w-layout-grid service-grid-card hide">
           <img
@@ -316,7 +315,7 @@
           <h1 class="service-desc">
             تصميم الحقائــــــــــب التدريبيــــــــــة
           </h1>
-          <button class="cssbuttons-io-button">
+          <a href="soon.html" class="cssbuttons-io-button">
             مشاهدة اعمالنا
             <div class="icon">
               <svg
@@ -332,7 +331,7 @@
                 ></path>
               </svg>
             </div>
-          </button>
+          </a>
         </div>
         <div class="w-layout-grid service-grid-card last-element-right hide">
           <img
@@ -347,7 +346,7 @@
           <h1 class="service-desc">
             المطبوعــــــات الورقيـــــــة والقماشيـــة والاعلانيـــة
           </h1>
-          <button class="cssbuttons-io-button">
+          <a href="soon.html" class="cssbuttons-io-button">
             مشاهدة اعمالنا
             <div class="icon">
               <svg
@@ -363,7 +362,7 @@
                 ></path>
               </svg>
             </div>
-          </button>
+          </a>
         </div>
 
         <div class="w-layout-grid service-grid-card last-element hide">
@@ -377,7 +376,7 @@
             <h1 class="service-pixel-shap">⬛</h1>
           </div>
           <h1 class="service-desc">التسويــــــــــق الالكترونــــــــــي</h1>
-          <button class="cssbuttons-io-button">
+          <a href="soon.html" class="cssbuttons-io-button">
             مشاهدة اعمالنا
             <div class="icon">
               <svg
@@ -393,7 +392,7 @@
                 ></path>
               </svg>
             </div>
-          </button>
+          </a>
         </div>
       </div>
       <button onclick="showMore()" class="show-more w-button">
