host img on imgur

--- a/index.html
+++ b/index.html
@@ -40,8 +40,12 @@
             (n.className += t + "touch");
       })(window, document);
     </script>
-    <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon" />
-    <link href="images/webclip.png" rel="apple-touch-icon" />
+    <link
+      href="https://imgur.com/SilMupg.png"
+      rel="shortcut icon"
+      type="image/x-icon"
+    />
+    <link href="https://imgur.com/SilMupg.png" rel="apple-touch-icon" />
   </head>
   <body class="body">
     <div
@@ -86,7 +90,7 @@
         </div>
         <a href="#" class="brand w-nav-brand">
           <img
-            src="images/logo.png"
+            src="https://imgur.com/JEsYtKN.png"
             sizes="(max-width: 767px) 98vw, (max-width: 991px) 728px, 940px"
             class="logo"
           />
@@ -96,7 +100,11 @@
     <section class="section hero-section">
       <div class="w-layout-blockcontainer hero-container w-container">
         <div class="w-layout-blockcontainer hero-text-container w-container">
-          <img src="images/pixel-white.png" alt="" class="white-pixel-img" />
+          <img
+            src="https://imgur.com/7TFBNLc.png"
+            alt=""
+            class="white-pixel-img"
+          />
           <h1 class="grating-word">حياك الله في بكســـل</h1>
           <h2 class="service-slogen">تفـــرد بتصميــم ابداعـــــي</h2>
           <div class="service-words-container">
@@ -141,7 +149,10 @@
             مجالها، وذلك بفضل فريق من الخبراء والمبدعين المتخصصين..
           </p>
         </div>
-        <img src="images/aboutus.png" class="aboutus-img animate-from-left" />
+        <img
+          src="https://imgur.com/MoahgS3.png"
+          class="aboutus-img animate-from-left"
+        />
       </div>
     </section>
     <section class="section service-secitn" id="our-service">
