--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
               <!-- First set of logos -->
               <div class="service-company-contairner">
                 <img
-                  src="images/companies-images/izar-colorful.png"
+                  src="https://imgur.com/8OmicuT.png"
                   loading="lazy"
                   alt=""
                   class="srvice-company-image"
@@ -431,7 +431,7 @@
               </div>
               <div class="service-company-contairner">
                 <img
-                  src="images/companies-images/R2Z.png"
+                  src="https://imgur.com/R5MFW4W.png"
                   loading="lazy"
                   alt=""
                   class="srvice-company-image"
@@ -439,7 +439,7 @@
               </div>
               <div class="service-company-contairner">
                 <img
-                  src="images/companies-images/myprofession.png"
+                  src="https://imgur.com/ZX7UwtH.png"
                   loading="lazy"
                   alt=""
                   class="srvice-company-image"
@@ -447,7 +447,7 @@
               </div>
               <div class="service-company-contairner">
                 <img
-                  src="images/companies-images/ahgaph.png"
+                  src="https://imgur.com/TFfgwgx.png"
                   loading="lazy"
                   alt=""
                   class="srvice-company-image"
@@ -455,7 +455,7 @@
               </div>
               <div class="service-company-contairner">
                 <img
-                  src="images/companies-images/samlex.png"
+                  src="https://imgur.com/RYd8r1w.png"
                   loading="lazy"
                   alt=""
                   class="srvice-company-image"
@@ -463,7 +463,7 @@
               </div>
               <div class="service-company-contairner">
                 <img
-                  src="images/companies-images/hospital.png"
+                  src="https://imgur.com/zJG3jI0.png"
                   loading="lazy"
                   alt=""
                   class="srvice-company-image"
