add last work pages

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           <h1 class="service-desc">
             تصميم الهويات البصرية والعلامــــات التجاريـــــة
           </h1>
-          <a href="soon.html" class="cssbuttons-io-button">
+          <a href="graphic.html" class="cssbuttons-io-button">
             مشاهدة اعمالنا
             <div class="icon">
               <svg
@@ -204,7 +204,7 @@
           <h1 class="service-desc">
             الموشـــــــن جرافيـــــــك<br />والفلاشات التوعويـــــــة
           </h1>
-          <a href="soon.html" class="cssbuttons-io-button">
+          <a href="motion.html" class="cssbuttons-io-button">
             مشاهدة اعمالنا
             <div class="icon">
               <svg
@@ -295,7 +295,7 @@
           <h1 class="service-desc">
             تطوير المواقــــــــــع<br />والتطبيقـات الالكترونيـة
           </h1>
-          <a href="soon.html" class="cssbuttons-io-button">
+          <a href="web.html" class="cssbuttons-io-button">
             مشاهدة اعمالنا
             <div class="icon">
               <svg
