fix hero section

--- a/graphic.html
+++ b/graphic.html
@@ -58,9 +58,9 @@
         role="banner" class="navbar w-nav">
         <div class="navbar-container w-container">
             <nav role="navigation" class="nav-menu w-nav-menu">
-                <a href="#" class="nav-link w-nav-link">الرئيسية</a>
-                <a href="#our-service" class="nav-link w-nav-link">خدماتنا</a>
-                <a href="#about-us" class="nav-link w-nav-link">من نحن</a>
+                <a href="index.html" class="nav-link w-nav-link">الرئيسية</a>
+                <a href="index.html#our-service" class="nav-link w-nav-link">خدماتنا</a>
+                <a href="index.html#about-us" class="nav-link w-nav-link">من نحن</a>
                 <a class="button" href="https://wa.me/967774769410" class="nav-link w-nav-link">
                     <div class="button-wrapper">
                         <div class="text">تواصـــــل معنــا</div>
@@ -76,7 +76,7 @@
             <div class="menu-button w-nav-button" onclick="toggleMobileMenu()">
                 <div class="w-icon-nav-menu"><span></span></div>
             </div>
-            <a href="#" class="brand w-nav-brand">
+            <a href="index.html" class="brand w-nav-brand">
                 <img src="https://imgur.com/JEsYtKN.png"
                     sizes="(max-width: 767px) 98vw, (max-width: 991px) 728px, 940px" class="logo" />
             </a>
@@ -95,29 +95,16 @@
             <div class="absolute bottom-40 right-20 animate-pulse delay-700">
                 <div class="w-6 h-6 border-2 border-agency-beige/40 rounded-full"></div>
             </div>
-            <div class="absolute top-1/2 left-10 animate-spin delay-1000" style="animation-duration: 8s;">
-                <div class="w-3 h-3 bg-gradient-to-r from-agency-beige to-agency-green rounded-sm"></div>
-            </div>
         </div>
         <div class="relative z-20 max-w-7xl mx-auto text-center">
             <h1 class="text-4xl md:text-5xl lg:text-7xl font-bold text-white mb-4 lg:mb-6 leading-tight"><span
                     class="inline-block animate-fade-in">التصميـــــم</span><span
-                    class="block text-agency-beige animate-slide-up delay-300 hover:scale-105 transition-transform cursor-pointer">الجرافيكي</span>
+                    class="block text-agency-beige animate-slide-up delay-300 hover:scale-105 transition-transform cursor-pointer">الجرافيكــــي</span>
             </h1>
             <p
                 class="text-lg md:text-xl lg:text-2xl text-gray-300 mb-8 lg:mb-12 max-w-3xl mx-auto animate-fade-in delay-500 px-2 leading-relaxed">
                 سرد بصري من خلال تصاميم مذهلة تلتقط جوهر علامتك التجارية وتوصل رسالتك بفعالية.</p>
             <div class="flex justify-center gap-4 mb-8 animate-fade-in delay-700">
-                <div class="px-4 py-2 bg-agency-green/20 backdrop-blur-sm rounded-full border border-agency-green/30">
-                    <span class="text-agency-green text-sm font-medium">هوية العلامة التجارية</span>
-                </div>
-                <div class="px-4 py-2 bg-agency-beige/20 backdrop-blur-sm rounded-full border border-agency-beige/30">
-                    <span class="text-agency-beige text-sm font-medium">تصميم طباعي</span>
-                </div>
-                <div
-                    class="px-4 py-2 bg-agency-green/20 backdrop-blur-sm rounded-full border border-agency-green/30 hidden sm:block">
-                    <span class="text-agency-green text-sm font-medium">تصميم رقمي</span>
-                </div>
             </div>
             <div class="animate-float delay-1000"></div>
         </div>
