--- a/motion.html
+++ b/motion.html
@@ -37,32 +37,32 @@
 
 <body>
   <div data-animation="default" data-collapse="small" data-duration="400" data-easing="ease" data-easing2="ease"
-    role="banner" class="navbar w-nav">
-    <div class="navbar-container w-container">
-      <nav role="navigation" class="nav-menu w-nav-menu">
-        <a href="#" class="nav-link w-nav-link">الرئيسية</a>
-        <a href="#our-service" class="nav-link w-nav-link">خدماتنا</a>
-        <a href="#about-us" class="nav-link w-nav-link">من نحن</a>
-        <a class="button" href="https://wa.me/967774769410" class="nav-link w-nav-link">
-          <div class="button-wrapper">
-            <div class="text">تواصـــــل معنــا</div>
-            <span class="wm-icon">
-              <svg xmlns="https://www.w3.org/2000/svg" height="2em" width="2em" viewBox="0 0 24 24">
-                <path fill="currentColor"
-                  d="M19.05 4.91A9.816 9.816 0 0 0 12.04 2c-5.46 0-9.91 4.45-9.91 9.91 0 1.75.46 3.45 1.32 4.95L2.05 22l5.25-1.38c1.45.79 3.08 1.21 4.74 1.21 5.46 0 9.91-4.45 9.91-9.91 0-2.65-1.03-5.14-2.9-7.01zm-7.01 15.24c-1.48 0-2.93-.4-4.2-1.15l-.3-.18-3.12.82.83-3.04-.2-.31c-.82-1.31-1.26-2.83-1.26-4.38 0-4.54 3.7-8.24 8.24-8.24 2.2 0 4.27.86 5.82 2.42 1.56 1.56 2.41 3.63 2.41 5.83.02 4.54-3.68 8.23-8.22 8.23zm4.52-6.16c-.25-.12-1.47-.72-1.69-.81-.23-.08-.39-.12-.56.12-.17.25-.64.81-.78.97-.14.17-.29.19-.54.06-.25-.12-1.05-.39-1.99-1.23-.74-.66-1.23-1.47-1.38-1.72-.14-.25-.02-.38.11-.51.11-.11.25-.29.37-.43s.17-.25.25-.41c.08-.17.04-.31-.02-.43s-.56-1.34-.76-1.84c-.2-.48-.41-.42-.56-.43h-.48c-.17 0-.43.06-.66.31-.22.25-.86.85-.86 2.07 0 1.22.89 2.4 1.01 2.56.12.17 1.75 2.67 4.23 3.74.59.26 1.05.41 1.41.52.59.19 1.13.16 1.56.1.48-.07 1.47-.6 1.67-1.18.21-.58.21-1.07.14-1.18s-.22-.16-.47-.28z" />
-              </svg>
-            </span>
+      role="banner" class="navbar w-nav">
+      <div class="navbar-container w-container">
+          <nav role="navigation" class="nav-menu w-nav-menu">
+              <a href="index.html" class="nav-link w-nav-link">الرئيسية</a>
+              <a href="index.html#our-service" class="nav-link w-nav-link">خدماتنا</a>
+              <a href="index.html#about-us" class="nav-link w-nav-link">من نحن</a>
+              <a class="button" href="https://wa.me/967774769410" class="nav-link w-nav-link">
+                  <div class="button-wrapper">
+                      <div class="text">تواصـــــل معنــا</div>
+                      <span class="wm-icon">
+                          <svg xmlns="https://www.w3.org/2000/svg" height="2em" width="2em" viewBox="0 0 24 24">
+                              <path fill="currentColor"
+                                  d="M19.05 4.91A9.816 9.816 0 0 0 12.04 2c-5.46 0-9.91 4.45-9.91 9.91 0 1.75.46 3.45 1.32 4.95L2.05 22l5.25-1.38c1.45.79 3.08 1.21 4.74 1.21 5.46 0 9.91-4.45 9.91-9.91 0-2.65-1.03-5.14-2.9-7.01zm-7.01 15.24c-1.48 0-2.93-.4-4.2-1.15l-.3-.18-3.12.82.83-3.04-.2-.31c-.82-1.31-1.26-2.83-1.26-4.38 0-4.54 3.7-8.24 8.24-8.24 2.2 0 4.27.86 5.82 2.42 1.56 1.56 2.41 3.63 2.41 5.83.02 4.54-3.68 8.23-8.22 8.23zm4.52-6.16c-.25-.12-1.47-.72-1.69-.81-.23-.08-.39-.12-.56.12-.17.25-.64.81-.78.97-.14.17-.29.19-.54.06-.25-.12-1.05-.39-1.99-1.23-.74-.66-1.23-1.47-1.38-1.72-.14-.25-.02-.38.11-.51.11-.11.25-.29.37-.43s.17-.25.25-.41c.08-.17.04-.31-.02-.43s-.56-1.34-.76-1.84c-.2-.48-.41-.42-.56-.43h-.48c-.17 0-.43.06-.66.31-.22.25-.86.85-.86 2.07 0 1.22.89 2.4 1.01 2.56.12.17 1.75 2.67 4.23 3.74.59.26 1.05.41 1.41.52.59.19 1.13.16 1.56.1.48-.07 1.47-.6 1.67-1.18.21-.58.21-1.07.14-1.18s-.22-.16-.47-.28z" />
+                          </svg>
+                      </span>
+                  </div>
+              </a>
+          </nav>
+          <div class="menu-button w-nav-button" onclick="toggleMobileMenu()">
+              <div class="w-icon-nav-menu"><span></span></div>
           </div>
-        </a>
-      </nav>
-      <div class="menu-button w-nav-button" onclick="toggleMobileMenu()">
-        <div class="w-icon-nav-menu"><span></span></div>
+          <a href="index.html" class="brand w-nav-brand">
+              <img src="https://imgur.com/JEsYtKN.png"
+                  sizes="(max-width: 767px) 98vw, (max-width: 991px) 728px, 940px" class="logo" />
+          </a>
       </div>
-      <a href="#" class="brand w-nav-brand">
-        <img src="https://imgur.com/JEsYtKN.png" sizes="(max-width: 767px) 98vw, (max-width: 991px) 728px, 940px"
-          class="logo" />
-      </a>
-    </div>
   </div>
   <section class="relative h-screen flex items-center justify-center px-4 sm:px-6 lg:px-8 overflow-hidden">
     <div class="absolute inset-0 bg-gradient-to-bl from-agency-black/90 via-agency-black/70 to-agency-green/20">
